    - implemented an overview routine which, for a given energy / generator preset, runs astra,
      loads and pre-processes state data, estimates focus location and width, gives maximum larmor angle,
      and neatly saves everything with a label of choice (or counter).

  - core module:
    - renamed .Model.impuls() to .Model.impuls_SI() to clarify output units

0.3.4, 04.10.20:
  - ASTRA plugin:
    - rewrote .read_states() to accomodate for any zphase (simple trick) and zstart/zstop
    - added warning to helptext about .clean() possibly overwriting unsaved runfiles

  - Tracking presets:
    - default now takes beam states every 0.01 m, assuming field 2 m wide @ z = 1m (particles immediately fly into the field);
      track 1 m afterwards, i.e. focal length of up to 2 m
    - re-added tracking flag to default
    - added "mono" beam preset - a smaller (100) line with spread in z-direction (i.e. flying carpet);
      the additional spread provides for somewhat better spatial resolution in z; probe flag set to true

  - track module:
    - rewrote .process_states() to be slightly faster
    - switched from own contraption to np.arctan2() for phase calculation; changed the whole phase business around a bit in general
    - .process_states() now adds dphi information (relative to starting beam state ("turn") and to the previous state ("dphi")) to each state
    - .process_states() now adds z, pz and t from reference particles to the rest, eliminating the need for a separate "refs" object
    - added make_heads() that gets some general statistics for individual states


  - core module:
    - Can now feed field samples and describe them (approximately) with interpolation; runs seamlessly.
    - Renamed calc.py into core.py, for less confusion
    - added a thin wrapper for scipy.curve_fit

  - General: