@@ -27,6 +27,9 @@
   - core module:
     - renamed .Model.impuls() to .Model.impuls_SI() to clarify output units
 
+  - general:
+    - Astra interface's helptext no longer greets the user upon running the main file
+
 0.3.4, 04.10.20:
   - ASTRA plugin:
     - rewrote .read_states() to accomodate for any zphase (simple trick) and zstart/zstop
